# plctag-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  publish.bat  readme.md  rustfmt.toml  wrapper.h
.github/workflows/: test.yml
benches/: bench_async.rs  bench_async_batch.rs  bench_sync.rs
crates/async/: Cargo.toml  README.md
crates/async/src/: cell.rs  entry.rs  lib.rs  op.rs  pool.rs
crates/async/src/op/: park.rs  rw.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: builder.rs  debug.rs  event.rs  lib.rs  raw.rs  status.rs  str.rs  value.rs
crates/derive/: Cargo.toml  README.md  readme.md
crates/derive/src/: decode_derive.rs  encode_derive.rs  get_value.rs  lib.rs  set_value.rs  shared.rs
crates/derive/tests/: test_derive.rs
crates/log/: Cargo.toml  README.md  readme.md
crates/log/src/: lib.rs
crates/sys/: Cargo.toml  README.md  build.rs  libplctag.h
crates/sys/libplctag/src/tests/ab_server/src/: socket.h
crates/sys/libplctag/src/wrappers/python/plctag/: libplctag.py
crates/sys/src/: lib.rs
examples/: async-read-write.rs  async_controller.rs  async_tag.rs  basic.rs  builder.rs  co-read-write.rs  controller.rs  simple.rs  string-read-write.rs  tag_builder.rs  udt.rs
plctag/: Cargo.toml  README.md
plctag-async/: Cargo.toml  README.md
plctag-async/src/: cell.rs  entry.rs  lib.rs  mailbox.rs  op.rs  pool.rs
plctag-co/: Cargo.toml  README.md
plctag-co/src/: cell.rs  entry.rs  lib.rs  mailbox.rs  op.rs  pool.rs
plctag-derive/: Cargo.toml
plctag-derive/src/: lib.rs  tag_derive.rs
plctag-log/: Cargo.toml
plctag-log/src/: lib.rs
plctag-sys/: Cargo.toml  README.md  build.rs  libplctag.h
plctag/src/: builder.rs  event.rs  lib.rs  raw.rs  status.rs  value.rs
src/: builder.rs  controller.rs  debug.rs  error.rs  event.rs  ffi.rs  lib.rs  options.rs  plc.rs  raw.rs  status.rs  tag.rs  value.rs
src/future/: controller.rs  mod.rs  tag.rs
tests/: integrate_test.rs
