[workspace]
members = [".","crates/async", "crates/core", "crates/sys", "crates/log", "crates/derive"]

[package]
name = "plctag"
version = "0.1.0"
edition = "2018"
description = "a rust wrapper of [libplctag](https://github.com/libplctag/libplctag), with rust style APIs and useful extensions"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Joylei/plctag-rs"
repository = "https://github.com/Joylei/plctag-rs.git"
documentation = "https://docs.rs/crate/plctag/"
keywords = ["automation", "control","plc",  "ethernet", "ethernet-ip", "modbus", "hardware"]
categories = ["api-bindings", "asynchronous", "hardware-support"]
authors = ["joylei <leingliu@gmail.com>"]

[lib]
name = "plctag"
path = "src/lib.rs"

[features]
default=["full"]
full = ["derive", "async", "log"]
log=["plctag-log"]
derive = ["plctag-derive"]
async= ["plctag-async"]

[dependencies]
plctag-core={path = "crates/core"}
plctag-async={path = "crates/async", optional = true}
plctag-derive={path = "crates/derive", optional = true}
plctag-log={path = "crates/log", optional = true}

[dev-dependencies]
tokio= "1"
anyhow="1"

[build]
#rustc-wrapper = "sccache"

[profile.test]
debug = 1
