[package]
name = "plctag"
version = "0.1.0"
edition = "2018"
description = "a rust wrapper of [libplctag](https://github.com/libplctag/libplctag), with rust style APIs and useful extensions"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Joylei/plctag-rs"
repository = "https://github.com/Joylei/plctag-rs.git"
documentation = "https://docs.rs/crate/plctag/"
keywords = ["automation", "control","plc",  "ethernet", "ethernet-ip", "modbus", "hardware"]
categories = ["api-bindings", "asynchronous", "hardware-support"]
authors = ["joylei <leingliu@gmail.com>"]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "plctag"
path = "src/lib.rs"

[features]
default=["full"]
full = ["derive", "async", "log"]
log=["plctag-log"]
derive = ["plctag-derive"]
async= ["plctag-async"]

[workspace]
members = [".","crates/async", "crates/core", "crates/sys", "crates/log", "crates/derive"]

[dependencies]
plctag-core={path = "crates/core", version = "0.1"}
plctag-async={path = "crates/async", version = "0.1", optional = true}
plctag-derive={path = "crates/derive", version = "0.1", optional = true}
plctag-log={path = "crates/log", version = "0.1", optional = true}

[dev-dependencies]
tokio= "1"
anyhow="1"
futures="0.3"
criterion = {version = "0.3", features = [ "async_futures","async_tokio", "cargo_bench_support"]}

[[bench]]
name = "bench_sync"
harness = false

[[bench]]
name = "bench_async"
harness = false

[[bench]]
name = "bench_async_batch"
harness = false

[build]
#rustc-wrapper = "sccache"

[profile.test]
debug = 1
