[package]
name = "plctag"
version = "0.1.0"
authors = ["joylei <leingliu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plctag-sys = { path = "../plctag-sys" }

log = "*"
parking_lot = { version = "*", optional = true }
paste = { version = "1", optional = true }
once_cell = { version = "1", optional = true }
dyn-clone = { version = "1", optional = true }

[features]
default = ["value", "event", "api_string", "api_raw_bytes"]
value = ["paste"]
event = ["parking_lot", "once_cell", "dyn-clone"]
# version 2.2+: string api
api_string = []
# version 2.3+: raw bytes api
api_raw_bytes = []
