[package]
name = "plctag-async"
version = "0.1.0"
authors = ["joylei <leingliu@gmail.com>"]
edition = "2018"

[dependencies]
plctag-core = { path = "../core" }
parking_lot = "*"
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "time",
    "sync",
    "macros",
] }
log = "*"
async-trait = "*"

[dev-dependencies]
anyhow = "*"
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "time",
    "sync",
    "macros",
] }
