[package]
name = "plctag-async"
version = "0.3.0"
edition = "2021"
description = "async wrapper for libplctag"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Joylei/plctag-rs"
repository = "https://github.com/Joylei/plctag-rs.git"
documentation = "https://docs.rs/crate/plctag/"
keywords = ["automation", "plc", "ethernet", "modbus", "hardware"]
categories = ["api-bindings", "asynchronous", "hardware-support"]
authors = ["joylei <leingliu@gmail.com>"]

[features]
default = ["value"]
value = ["plctag-core/value"]

[dependencies]
plctag-core = { path = "../core", version = "0.3", default-features = false }
futures-util = "0.3"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "time",
    "sync",
    "macros",
] }
