[package]
name = "plctag-core"
version = "0.3.0"
edition = "2018"
description = "a rust wrapper of [libplctag](https://github.com/libplctag/libplctag), with rust style APIs and useful extensions"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Joylei/plctag-rs"
repository = "https://github.com/Joylei/plctag-rs.git"
documentation = "https://docs.rs/crate/plctag/"
keywords = ["automation", "plc", "ethernet","modbus", "hardware"]
categories = ["api-bindings","hardware-support"]
authors = ["joylei <leingliu@gmail.com>"]

[dependencies]
plctag-sys = { path = "../sys", version = "0.3" }

log = "0.4"
paste = { version = "1", optional = true }

[features]
default = ["value", "api_string", "api_raw_bytes", "api_tag_set_size"]
value = ["paste"]
# libplctag version 2.2+: string api
api_string = []
# libplctag version 2.3+: raw bytes api
api_raw_bytes = []
# libplctag version 2.4
api_tag_set_size = []