[package]
name = "plctag-core"
version = "0.4.1"
edition = "2021"
description = "a rust wrapper of [libplctag](https://github.com/libplctag/libplctag), with rust style APIs and useful extensions"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Joylei/plctag-rs"
repository = "https://github.com/Joylei/plctag-rs.git"
documentation = "https://docs.rs/crate/plctag/"
keywords = ["automation", "plc", "ethernet", "modbus", "hardware"]
categories = ["api-bindings", "hardware-support"]
authors = ["joylei <leingliu@gmail.com>"]

[dependencies]
plctag-sys = { path = "../sys", version = "0.3" }
paste = { version = "1", optional = true }

[features]
default = ["std", "value", "builder"]
value = ["paste"]
builder = []
std = []
