[package]
name = "plctag-derive"
version = "0.1.0"
edition = "2018"

[lib]
name = "plctag_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro-crate = "1"
proc-macro2 = "1"
proc-quote = "0.4"
syn = { version = "1", features = ["full", "parsing"] }

[dev-dependencies]
plctag-core={path = "../core", features = ["value"]}