[package]
name = "plctag-derive"
version = "0.3.2"
edition = "2021"
description = "macros for `plctag`"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Joylei/plctag-rs"
repository = "https://github.com/Joylei/plctag-rs.git"
documentation = "https://docs.rs/crate/plctag/"
keywords = ["automation", "plc", "ethernet", "modbus", "hardware"]
categories = ["api-bindings"]
authors = ["joylei <leingliu@gmail.com>"]

[lib]
name = "plctag_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro-crate = "3"
proc-macro2 = "1"
proc-quote = "0.4"
syn = { version = "2", features = ["full", "parsing"] }

[dev-dependencies]
plctag-core = { path = "../core", features = ["value"] }
