[package]
name = "plctag-sys"
version = "0.3.3"
edition = "2021"
description = "native libplctag binding"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Joylei/plctag-rs"
repository = "https://github.com/Joylei/plctag-rs.git"
documentation = "https://docs.rs/crate/plctag/"
keywords = ["automation", "plc", "ethernet", "modbus", "hardware"]
categories = ["api-bindings", "hardware-support"]
authors = ["joylei <leingliu@gmail.com>"]

[dependencies]

[build-dependencies]
bindgen = "0.68"
cmake = "0.1"
pkg-config = "0.3"
